[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
console_error_panic_hook = "0.1"
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "b9f05f9" }
once_cell = "1"
slotmap = "1"
smallvec = "1"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
typed-builder = "0.12"

# internal
leptos_aria = { path = "crates/leptos_aria", version = "0.0.0" }
leptos_aria_button = { path = "crates/leptos_aria_button", version = "0.0.0" }
leptos_aria_interactions = { path = "crates/leptos_aria_interactions", version = "0.0.0" }
leptos_aria_utils = { path = "crates/leptos_aria_utils", version = "0.0.0" }
