[package]
name = "leptos_aria"
version = "0.0.0"
categories = ["wasm", "web-programming", "gui", "accessibility"]
documentation = "https://docs.rs/leptos_aria"
edition = "2021"
homepage = "https://github.com/ifiokjr/leptos_aria"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptos", "aria", "a11y", "ui"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/leptos_aria"
rust-version = "1.67.0"
description = "Accessible components for the leptos framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_aria_button = { workspace = true }
leptos_aria_interactions = { workspace = true }
leptos_aria_utils = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
