[package]
name = "leptos_aria_interactions"
version = "0.0.0"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
leptos = { workspace = true, features = ["stable"] }
leptos_aria_utils = { workspace = true }
once_cell = { worksace = true }
smallvec = { workspace = true }
web-sys = { workspace = true, features = ["Navigator", "CssStyleDeclaration"] }
