[package]
name = "leptos_aria_utils"
version = "0.0.0"
categories = ["wasm", "web-programming", "gui", "accessibility"]
documentation = "https://docs.rs/leptos_aria_utils"
edition = "2021"
homepage = "https://github.com/ifiokjr/leptos_aria"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["leptos", "aria", "a11y", "ui"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/leptos_aria"
rust-version = "1.67.0"
description = "Accessible components for the leptos framework"

[dependencies]
leptos = { workspace = true, features = ["stable"] }
web-sys = { workspace = true, features = ["Navigator", "CssStyleDeclaration"] }
